# LuminaScrape

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
agents/: extractor.py  overseer.py  preparer.py  schema_generator.py
api/: main.py
api/routes/: config.py  scrape.py
config/: models.yaml
core/: browser.py  crawler.py  llm.py  logger.py  ollama_manager.py  orchestrator.py  state.py
schemas/: api_models.py  settings.py
tools/: accept_cookies.py  bypass_cloudflare.py  check_platform.py  clean_dom.py  click_element.py  crawl_page.py  get_accessibility_tree.py  get_robots_txt.py  parse_sitemap.py  scrape_static.py  scroll_page.py  solve_hcaptcha.py  solve_recaptcha.py  take_screenshot.py  type_text.py  visit_url.py
